--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h2>HTML Buttons</h2>
 <p>HTML buttons are defined with the button tag:</p>
 
-<button>Click me</button>
+<button>Hello World button</button>
 
 </body>
 </html>
