--- a/home_work1/index.html
+++ b/home_work1/index.html
@@ -2,10 +2,10 @@
 <html>
 <body>
 
-<h2>HTML Buttons</h2>
+<h2>Hello World button</h2>
 <p>HTML buttons are defined with the button tag:</p>
 
-<button>Click me</button>
+<button>Click me and u will be happy</button>
 
 </body>
 </html>
