--- a/home_work1/index.html
+++ b/home_work1/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h2>Hello World button</h2>
-<p>HTML buttons are defined with the button tag:</p>
+<p>This is cool button, just press on her and everything will be cool:</p>
 
 <button>Click me and u will be happy</button>
 
